--- a/ASP_Test/Views/Home/Degree.cshtml
+++ b/ASP_Test/Views/Home/Degree.cshtml
@@ -160,7 +160,7 @@
      
             <div class="row">
                 <div class="col-lg">
-                    <h1>@Model.Semesters.Season @Model.Semesters.SemYear, @Model.index, @Model.count</h1>
+                    <h1>@Model.Semesters.Season @Model.Semesters.SemYear</h1>
                     @{
                         if (Model.index != 0)
                         {
