--- a/ASP_Test/Views/Home/LogIn.cshtml
+++ b/ASP_Test/Views/Home/LogIn.cshtml
@@ -6,7 +6,7 @@
 <h3 style="text-align:center;">Log In</h3>
 <form method="post" action="LogIn">
     <div class="mb-3" style="text-align:center;">
-        <label for="" class="form-label">Email</label>
+        <label for="" class="form-label">Username</label>
         <input type="text" placeholder="Sign-In ID (Username)" class="form-control" asp-for="Email" maxlength="30" />
 
 
