--- a/ASP_Test/Views/Home/Settings.cshtml
+++ b/ASP_Test/Views/Home/Settings.cshtml
@@ -35,7 +35,7 @@
                                     @{
                                         if ((deg.VersionYear+" "+deg.DegreeName).CompareTo(Model.CurrentDegree) != 0)
                                         {
-                                            <button type="button" class="btn btn-primary" onclick="location.href='@Url.ActionLink("UpdateDegree", "Home",new{DID=deg.DegreeId})'">Change Degree</button>
+                                            <button type="button" class="btn btn-danger" onclick="location.href='@Url.ActionLink("UpdateDegree", "Home",new{DID=deg.DegreeId})'">Change Degree</button>
                                         }
                                     }
                                 </td>
@@ -65,7 +65,7 @@
                                         @{
                                             if (yr.CompareTo(Model.GradYear) != 0)
                                             {
-                                            <button type="button" class="btn btn-primary" onclick="location.href='@Url.ActionLink("UpdateGradYear", "Home",new{Year=yr})'">Change Graduation Year</button>
+                                            <button type="button" class="btn btn-danger" onclick="location.href='@Url.ActionLink("UpdateGradYear", "Home",new{Year=yr})'">Change Graduation Year</button>
                                             }
                                         }
                                 </td>
