--- a/ASP_Test/Views/Home/Welcome.cshtml
+++ b/ASP_Test/Views/Home/Welcome.cshtml
@@ -6,5 +6,5 @@
 
 <h1>Welcome to PAPA</h1>
 <p>This a degree planner aid for students at St. Martin's University.</p>
-<button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("LogIn", "Home")'">Go To Log In</button>
+<button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("LogIn", "Home")'">Go To Log In</button>
 </div>
