--- a/ASP_Test/Views/Home/AdminDegree.cshtml
+++ b/ASP_Test/Views/Home/AdminDegree.cshtml
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("CreateDegree", "Home")'">New Degree</button>
+    <button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("CreateDegree", "Home")'">New Degree</button>
 
     <table class="table table-bordered">
         <thead>
@@ -29,7 +29,7 @@
                         <td>@Deg.DegreeName</td>
                         <td>@Deg.VersionYear</td>
                         <td>
-                        <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("EditDegree", "Home",new{DID=Deg.DegreeId})'">Edit Degree</button>
+                        <button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("EditDegree", "Home",new{DID=Deg.DegreeId})'">Edit Degree</button>
                         </td>
                     </tr>
                     }
