--- a/ASP_Test/Views/Home/Degree.cshtml
+++ b/ASP_Test/Views/Home/Degree.cshtml
@@ -61,7 +61,7 @@
         }
     }
 *@
-    <div class="container card border-dark">
+    <div class="container card border-light">
     <div class="row">
             <div class="col-3 bg-danger" style=" border-radius: 15px 50px 30px;">
                 <h4 class="text-white" style="padding-top:20em padding-bottom:20em;">Requirements</h4>
