--- a/ASP_Test/Views/Home/EditClasses.cshtml
+++ b/ASP_Test/Views/Home/EditClasses.cshtml
@@ -27,10 +27,9 @@
 
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-danger">Submit</button>
 </form>
 <button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("DeleteClass", "Home",new {DID=@Model.ClassId})'">Delete Class</button>
-<br />
-<button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("AdminClass", "Home")'">Back To Class Editor</button>
+<button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("AdminClass", "Home")'">Back To Class Editor</button>
 
 
