--- a/ASP_Test/Views/Home/EditDegrees.cshtml
+++ b/ASP_Test/Views/Home/EditDegrees.cshtml
@@ -12,10 +12,10 @@
         @Html.TextBoxFor(d=>d.VersionYear,new {@class="form-control", @maxlength="4",@minlength="4"})
     </div>
 
-    <button type="submit" class="btn btn-primary">Save and continue to requirements</button>
+    <button type="submit" class="btn btn-danger">Save and continue to requirements</button>
 </form>
 <button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("DeleteDegree", "Home",new {DID=@Model.DegreeId})'">Delete Degree</button>
 <br />
-<button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("AdminDegree", "Home")'">Back To Degree Editor</button>
+<button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("AdminDegree", "Home")'">Back To Degree Editor</button>
 
 
