--- a/ASP_Test/Views/Home/CreateReqs.cshtml
+++ b/ASP_Test/Views/Home/CreateReqs.cshtml
@@ -4,7 +4,7 @@
 
 }
 <h2>Editing Requirements for: @Model.DegreeName @Model.VersionYear</h2>
-<button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("AdminDegree", "Home")'">Continue To Degree Editor</button>
+<button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("AdminDegree", "Home")'">Continue To Degree Editor</button>
 <div class="container">
     <div class="row">
         <div class="col">
