--- a/ASP_Test/Views/Home/CreateDegrees.cshtml
+++ b/ASP_Test/Views/Home/CreateDegrees.cshtml
@@ -3,6 +3,7 @@
     Layout = "LayoutAdmin";
 
 }
+<h7>Note: If returned to this page when trying to submit, the year syntax is wrong. It should be a four digit number</h7>
     <form method="post" action="CreateDegree">
     <div class="mb-3">
         <h3>Degree Name</h3>@Html.TextBoxFor(d=>d.DegreeName,new {@class="form-control", @maxlength="50"})
